添加欢迎标题到博客创建页面

--- a/blog-creat/index.html
+++ b/blog-creat/index.html
@@ -9,6 +9,6 @@
     <link rel="stylesheet" href="./iconmyself/download/font_8v97qh2qc4t/iconfont.css">
 </head>
 <body>
-  
+  <h1>helloworld</h1>
 </body>
 </html>
