--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
 </head>
 <body>
   <h1>helloworld</h1>
+  <header>
+    <nav class="header-left">
+        <a href="index.html">首页</a>
+        <a href="#">文章</a>
+        <a href="#">关于</a>
+    </nav>
+    <nav class="header-right">
+        <a href="#">登录</a>
+        <a href="#">注册</a>
+    </nav>
+  </header>
 </body>
 </html>
