网站作业提交

--- a/index.html
+++ b/index.html
@@ -7,9 +7,22 @@
     <title>My Blog</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./iconmyself/download/font_8v97qh2qc4t/iconfont.css">
+    <!-- <style>
+      /* .header-left {
+        float: left;
+      } */
+      </style> -->
 </head>
 <body>
-  <h1>helloworld</h1>
+<!--
+style="
+  background-image: url(https://cdn.jsdelivr.net/gh/Flygreenbaby/Images@main/img/202404131616418.jpg);
+  background-size:cover;
+  background-attachment: fixed;
+  background-repeat:no-repeat;
+  background-position:center;" 
+-->
+  <!-- <h1>helloworld</h1>
   <header>
     <nav class="header-left">
         <a href="index.html">首页</a>
@@ -20,6 +33,40 @@
         <a href="#">登录</a>
         <a href="#">注册</a>
     </nav>
-  </header>
+  </header> -->
+
+  <div style="
+    text-align: center;
+    padding: 40px;
+  ">
+    <img src="https://cdn.jsdelivr.net/gh/Flygreenbaby/Images@main/img/202306202055962.jpeg" alt="ahyun" 
+    style="
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;">
+    <h1>ahyun</h1>
+  </div>
+
+  <div style="
+    max-width: 700px;
+    margin: 30px auto;
+    padding: 15px;
+    line-height: 1.7;
+  ">
+    <p>图片太大了</p>
+    <p>我好像没办法让这几行字展现出来</p>
+    <p>试一下看看</p>
+    <p>不是居中</p>
+    <p>再试试</p>
+    <p>蒜鸟蒜鸟，下次再调</p>
+  </div>
+  <div style="
+    text-align: center;
+    font-size: 12px;
+    padding: 40px;
+  ">
+    <p>我的网站</p>
+    <a href="#">友情链接</a>
+  </div>
 </body>
 </html>
