友情链接更新

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ style="
     padding: 40px;
   ">
     <p>我的网站</p>
-    <a href="#">友情链接</a>
+    <a href="https://github.com/Flygreenbaby/Flygreenbaby.github.io/blob/main/README.md">友情链接</a>
   </div>
 </body>
 </html>
