加入汽车视频欣赏项目

--- a/index.html
+++ b/index.html
@@ -7,32 +7,24 @@
     <title>My Blog</title>
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./iconmyself/download/font_8v97qh2qc4t/iconfont.css">
-    <!-- <style>
-      /* .header-left {
-        float: left;
-      } */
-      </style> -->
 </head>
 <body>
-<!--
-style="
-  background-image: url(https://cdn.jsdelivr.net/gh/Flygreenbaby/Images@main/img/202404131616418.jpg);
-  background-size:cover;
-  background-attachment: fixed;
-  background-repeat:no-repeat;
-  background-position:center;" 
--->
-  <!-- <h1>helloworld</h1>
-  <header>
-    <nav class="header-left">
+  <!-- <header>
+    <nav style="
+      display: flex;
+
+    ">
         <a href="index.html">首页</a>
         <a href="#">文章</a>
         <a href="#">关于</a>
     </nav>
-    <nav class="header-right">
+    <nav style="
+      display: flex;
+      
+    ">
         <a href="#">登录</a>
         <a href="#">注册</a>
-    </nav>
+    </nav>  
   </header> -->
 
   <div style="
@@ -67,6 +59,7 @@ style="
   ">
     <p>我的网站</p>
     <a href="https://github.com/Flygreenbaby/Flygreenbaby.github.io/blob/main/README.md">友情链接</a>
+    <a href="./articles/car-video.html">汽车视频欣赏</a>
   </div>
 </body>
 </html>
