--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   ">
     <p>我的网站</p>
     <a href="https://github.com/Flygreenbaby/Flygreenbaby.github.io/blob/main/README.md">友情链接</a>
-    <a href="./articles/car-video.html">汽车视频欣赏</a>
+    <a href="./articles/expanding-car/car-video.html">汽车视频欣赏</a>
   </div>
 </body>
 </html>
