--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog</title>
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/Flygreenbaby/Images@main/img/202502161609500.ico">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./iconmyself/download/font_8v97qh2qc4t/iconfont.css">
 </head>
