二维码设计成功

--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
       <p>再试试</p>
       <p>蒜鸟蒜鸟，下次再调</p>
     </div>
+
+    <div class="qrcode-container">
+      <h1>扫描二维码在移动端查看</h1>
+      <div id="qrcode"></div>
+    </div>
+
   </div>
 
   <nav>
@@ -72,7 +78,9 @@
     <p>© 2025 ahyun</p>
   </footer>
 
+  <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
   <script src="./index.js"></script>
+
 </body>
 
 </html>
