--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <li><a href="https://github.com/Flygreenbaby/Flygreenbaby.github.io/blob/main/README.md">友情链接</a></li>
       <li><a href="./articles/expanding-car/car-video.html">汽车视频欣赏</a></li>
       <li><a href="./articles/ahyun-love/ahyun-love.html">可以成为我的恋人吗？</a></li>
+      <li><a href="./articles/NoteWall.html">NoteWall</a></li>
     </ul>
   </nav>
 
