调整文本对齐方式，使内容居中显示

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         margin: 30px auto;
         padding: 15px;
         line-height: 1.7;
+        text-align: center;
         ">
       <p>图片太大了</p>
       <p>我好像没办法让这几行字展现出来</p>
@@ -52,6 +53,7 @@
       <p>不是居中</p>
       <p>再试试</p>
       <p>蒜鸟蒜鸟，下次再调</p>
+      <p>嘿嘿嘿，又居中了</p>
     </div>
 
     <div class="qrcode-container">
